[package]
name = "test-duration-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
quick-xml = { version = "0.36.2", features = ["serialize"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"

[dev-dependencies]
tempfile = "3.13.0"
